serverless-workflow/deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: workflow-service
  name: workflow-service
spec:
  selector:
    matchLabels:
      deployment: workflow-service
      app: workflow-service
  template:
    metadata:
      labels:
        app: workflow-service
        deployment: workflow-service
    spec:
      serviceAccountName: workflow-service
      containers:
        - env:
            - name: WORKFLOW_NAME
              value: example-workflow
            - name: WORKFLOW_SOURCE
              value: k8s
            - name: NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
          image: quay.io/ruben/workflow-service:knative
          imagePullPolicy: Always
          name: workflow-service
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
