serverless-workflow/deploy/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: workflow-service
  labels:
    app: workflow-service
spec:
  selector:
    deployment: workflow-service
    app: workflow-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
